<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.test.inclass03.MainActivity">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:layout_below="@+id/nameEditText"
        android:inputType="textEmailAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/nameEditText"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/nameHint" />

    <ImageView
        android:id="@+id/selectAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/select_avatar" />

    <RadioGroup
        android:id="@+id/selectDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/department"
        android:layout_alignLeft="@+id/department"
        android:layout_alignStart="@+id/department"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp">

        <RadioButton
            android:id="@+id/sisButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sis" />

        <RadioButton
            android:id="@+id/csButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cs" />

        <RadioButton
            android:id="@+id/bioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bio" />
    </RadioGroup>

    <TextView
        android:id="@+id/department"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/selectAvatar"
        android:layout_alignLeft="@+id/selectMood"
        android:layout_alignStart="@+id/selectMood" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectMood"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/submit" />

    <SeekBar
        android:id="@+id/selectMood"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="3"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/selectDepartment"
        android:layout_alignRight="@+id/submitButton"
        android:layout_alignEnd="@+id/submitButton" />

    <ImageView
        android:id="@+id/moodImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/selectDepartment"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:srcCompat="@drawable/angry" />

</RelativeLayout>